[package]
name = "unum"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "Implementation of the unum number format described in John Gustafson's The End of Error: Unum Computing"
authors = ["Eduard-Mihai Burtescu <edy.burt@gmail.com>"]
repository = "https://github.com/eddyb/unum.git"
homepage = "https://github.com/eddyb/unum"
